@@ -3,6 +3,9 @@ Changelog
 
 ## NEXT_RELEASE (minor release)
 
+- BatHashtbl: added {to|from}_list
+  (Francois Berenger)
+
 - Clarification and improvements to the documentation
   #682, #685, #693
   (Florian Angeletti, Johannes Kloos, Michael Färber)
